--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "dotenv": "^8.2.0",
     "emailjs-com": "^3.1.0",
     "jquery": "^3.6.0",
+    "react": "^17.0.2",
     "react-dom": "^17.0.1",
     "react-dotenv": "^0.1.3",
     "react-ga": "^3.3.0",
     "react-particles-js": "^3.5.3",
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
+    "react-tsparticles": "^1.32.0",
     "react-zmage": "^0.8.5-beta.36",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.10"
@@ -51,7 +53,11 @@
     "chokidar": "^3.5.1",
     "gh-pages": "^3.1.0"
   },
-   "react-dotenv": {
-    "whitelist": ["REACT_APP_SERVICE", "REACT_APP_USER", "REACT_APP_TEMPLATE "]
+  "react-dotenv": {
+    "whitelist": [
+      "REACT_APP_SERVICE",
+      "REACT_APP_USER",
+      "REACT_APP_TEMPLATE "
+    ]
   }
 }
